--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!--<![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{title}</title>
+    <title>my first test email</title>
     <!--[if (gte mso 9)|(IE)]>
       <style type="text/css">
         table {
@@ -15,32 +15,54 @@
       </style>
     <![endif]-->
   </head>
-  <body style="margin: 0 !important;padding: 0;max-width: 600px;">
+  <body
+    leftmargin="0"
+    topmargin="0"
+    marginwidth="0"
+    marginheight="0"
+    style="width:100%;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;background-color:#f6f7fb;font-family:Arial, sans-serif;mso-line-height-rule:exactly;-webkit-font-smoothing:antialiased;-ms-text-size-adjust:none !important;"
+  >
     <center
       style="width: 100%;table-layout: fixed;-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;"
     >
-      <div style="max-width: 640px;margin: 0 auto;">
+      <div style="max-width: 768px;margin: 0 auto;background-color: #EEEEEE">
         <!--[if (gte mso 9)|(IE)]>
       <table width="640" align="center">
       <tr>
       <td>
       <![endif]-->
         <table
+          border="0"
+          cellpadding="0"
+          cellspacing="0"
           align="center"
-          style="Margin: 0 auto;width: 100%;max-width: 640px;"
+          style="margin: 0 auto;width: 100%;padding-left: 30px;padding-right: 30px"
         >
           <tr>
-            <td style="text-align: left;">
-              <table width="100%">
+            <td style="text-align: center;">
+              <table
+                width="100%"
+                align="center"
+                border="0"
+                cellpadding="0"
+                cellspacing="0"
+                style="background-color: #FFFFFF"
+              >
                 <tr>
                   <td>
-                    <img
-                      src="https://i.ibb.co/xDCgkXq/t-30-l-70-CAVC-logo-colour.png"
-                      alt=""
-                      width="233"
-                      height="90"
-                      border="0"
-                    />
+                    <table width="100%">
+                      <tr>
+                        <td>
+                          <img
+                            src="https://i.ibb.co/xDCgkXq/t-30-l-70-CAVC-logo-colour.png"
+                            alt=""
+                            width="233"
+                            height="90"
+                            border="0"
+                          />
+                        </td>
+                      </tr>
+                    </table>
                   </td>
                 </tr>
               </table>
