--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>my first test email</title>
     <style type="text/css">
-      @media only screen and (min-width: 360px) {
-        /* .button { width: 240px !important; } */
-        /* .title-text { font-size:22px !important; } */
-      }
+      table {border-collapse:separate;}
+      a, a:link, {text-decoration: none; color: #00788a;} 
+      a:hover {text-decoration: underline;}
+      h2,h2 a,h2 ,h3,h3 a,h3 ,h4,h5,h6,.t_cht {color:#000 !important;}
+      .ExternalClass p, .ExternalClass span, .ExternalClass font, .ExternalClass td {line-height: 100%;}
+      .ExternalClass {width: 100%;}
       @media only screen and (min-width: 426px) {
         .header-text { padding-right: 40px !important; }
         .future-column-container { width: 320px !important; }
